--- a/index.html
+++ b/index.html
@@ -1,35 +1,12 @@
-<!doctype html>
-<html lang="en">
-<head>
-<meta charset="utf-8">
-<title>Personal Page</title>
-<base href="/">
-
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="icon" type="image/x-icon" href="favicon.ico">
-
-<link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel='stylesheet'
-	href='https://fonts.googleapis.com/css?family=Roboto'>
-<link rel="stylesheet"
-	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-html, body, h1, h2, h3, h4, h5, h6 {
-	font-family: "Roboto", sans-serif
-}
-</style>
-
-<link rel="stylesheet" href="styles.fbecdad19ca3be9666d9.css"></head>
+<!DOCTYPE html><html lang="en"><head>
+  <meta charset="utf-8">
+  <title>AngularAboutMe</title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="stylesheet" href="styles.a68fde87e9d650e0.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.a68fde87e9d650e0.css"></noscript></head>
 <body>
-	<app-root></app-root>
+  <app-root></app-root>
+<script src="runtime.ccd8aa458c5e6922.js" type="module"></script><script src="polyfills.8a2717b21eb1df68.js" type="module"></script><script src="main.41a0f0285bf454a7.js" type="module"></script>
 
-	<script
-		src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script
-		src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.662173b507c7bb60d452.js"></script><script type="text/javascript" src="main.7dfbe8a04f5ef9cb2f5e.js"></script></body>
-</html>
+</body></html>
