Improved look and feel

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.a68fde87e9d650e0.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.a68fde87e9d650e0.css"></noscript></head>
+<style>html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}html{-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}html,body{font-family:Verdana,sans-serif;font-size:15px;line-height:1.5}html{overflow-x:hidden}:disabled *{pointer-events:none}</style><link rel="stylesheet" href="styles.8c72fed40de3688e.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.8c72fed40de3688e.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="runtime.ccd8aa458c5e6922.js" type="module"></script><script src="polyfills.8a2717b21eb1df68.js" type="module"></script><script src="main.c660d98eb3f05410.js" type="module"></script>
+<script src="runtime.ccd8aa458c5e6922.js" type="module"></script><script src="polyfills.8a2717b21eb1df68.js" type="module"></script><script src="main.456d0e52368ececf.js" type="module"></script>
 
 </body></html>
